Leave base.html without navbar or footer

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% include "navbar.html" %}
 
 <header data-theme="dark">
   <div class="container banner">
@@ -163,5 +164,7 @@
     </div>
   </section>
 </main>
+
+{% include "footer.html" %}
 
 {% endblock %}
