--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,13 @@
-<nav class="container-fluid justify-end" data-theme="dark">
+<nav class="container-fluid" data-theme="dark">
+  <ul>
+    {% for item in config.extra.navlinks %}
+      {%- if not item.is_external -%}
+      <li>
+        <a href="{{ item.url }}">{{ item.name }}</a>
+      </li>
+      {%- endif -%}
+    {% endfor %}
+  </ul>
   <ul>
     <li>
       <button id="themeSwitcher" class="themeswitch" aria="Toggle theme">
@@ -6,14 +15,14 @@
       </button>
     </li>
     {% for item in config.extra.navlinks %}
-    <li>
-      <a href="{{ item.url }}">
-        {{ item.name }}
-        {%- if item.is_external -%}
-        <i class="fa-solid fa-arrow-up-right-from-square" ></i>
-        {%- endif -%}
-      </a>
-    </li>
+      {%- if item.is_external -%}
+      <li>
+        <a href="{{ item.url }}">
+          {{ item.name }}
+          <i class="fa-solid fa-arrow-up-right-from-square" ></i>
+        </a>
+      </li>
+      {%- endif -%}
     {% endfor %}
   </ul>
 </nav>
