--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
         class="secondary"
         href="#about"
         role="button"
-        arial-label="Learn more about the workshop"
+        aria-label="Learn more about the workshop"
       >
         Learn more
       </a>
@@ -35,68 +35,60 @@
   </div>
 </header>
 
-<main>
+<main class="home">
   <section class="container">
-    <div class="dflex flex-row align-start">
-      <div class="flex-2">
-        <h2 id="about">About</h2>
+    <h2 id="about">About</h2>
+    <p style="padding-left: 5em; padding-right: 5em;">
+      We are happy to announce a <strong>2 day workshop</strong> in
+      which the communities of
+      <a href="https://www.fatiando.org">Fatiando a Terra</a> and
+      <a href="https://wwww.simpeg.xyz">SimPEG</a> will join together to
+      set the roadmap for enhancing open-source tools for geophysics.
+      The workshop will take place at the
+      <a href="https://www.birs.ca"
+        >Banff International Research Station (BIRS)</a
+      >
+      from <strong>July 28 to 30, 2023</strong>, surrounded by
+      astonishing mountain landscape.
+    </p>
+
+    <div class="information">
+      <div class="flex-1">
+        <h3>
+        <i class="fa-solid fa-calendar"></i> When?
+        </h3>
+        <p>July 28 to 30, 2023</p>
+      </div>
+      <div class="flex-1">
+        <h3>
+        <i class="fa-solid fa-location-dot"></i> Where?
+        </h3>
         <p>
-          We are happy to announce a <strong>2 day workshop</strong> in
-          which the communities of
-          <a href="https://www.fatiando.org">Fatiando a Terra</a> and
-          <a href="https://wwww.simpeg.xyz">SimPEG</a> will join together to
-          set the roadmap for enhancing open-source tools for geophysics.
-        </p>
-        <p>
-          The workshop will take place at the
-          <a href="https://www.birs.ca"
-            >Banff International Research Station (BIRS)</a
-          >
-          from <strong>July 28 to 30, 2023</strong>, surrounded by
-          astonishing mountain landscape.
+          Banff International Research Station (<a
+            href="https://www.birs.ca"
+            >BIRS</a
+          >), Alberta, Canada
         </p>
       </div>
-
       <div class="flex-1">
-        <h3 id="information">Information</h3>
-        <ul class="fa-ul information">
-          <li>
-            <i class="fa-li fa-solid fa-calendar"></i>
-            <strong>When?</strong>
-            <br />
-            <span>July 28 to 30, 2023</span>
-          </li>
-          <li>
-            <i class="fa-li fa-solid fa-location-dot"></i>
-            <strong>Where?</strong>
-            <br />
-            <span>
-              Banff International Research Station (<a
-                href="https://www.birs.ca"
-                >BIRS</a
-              >), Alberta, Canada
-            </span>
-          </li>
-          <li>
-            <i class="fa-li fa-solid fa-calendar"></i>
-            <strong>More information</strong>
-            <br />
-            <span
-              >See
-              <a
-                href="https://www.birs.ca/events/2023/2-day-workshops/23w2014"
-                >event in Birs website</a
-              ></span
-            >
-          </li>
-        </ul>
+        <h3>
+        <i class="fa-solid fa-calendar"></i> More information
+        </h3>
+        <p
+          >See
+          <a
+            href="https://www.birs.ca/events/2023/2-day-workshops/23w2014"
+            >event in Birs website</a
+          ></p
+        >
       </div>
     </div>
+
     <div class="text-center">
       <!-- map -->
       <iframe
-        width="80%"
-        height="550em"
+        width="100%"
+        height="750em"
         frameborder="0"
         scrolling="no"
         marginheight="0"
@@ -117,8 +109,8 @@
   <section class="theme-bg" data-theme="dark">
     <div class="container dflex flex-row align-start">
       <div class="flex-1">
-        <h2 class="text-center">How to participate?</h2>
-        <p class="text-center">
+        <h2>How to participate?</h2>
+        <p>
           Although in-person slots are limited, we have plenty of room for
           <strong>virtual participants</strong>. If you want to join, either
           <strong>personally</strong> or <strong>virtually</strong>, please
@@ -127,8 +119,8 @@
       </div>
 
       <div class="flex-1">
-        <h2 class="text-center" id="contact">Contact us</h2>
-        <p class="text-center">
+        <h2 id="contact">Contact us</h2>
+        <p>
           If you have any questions regarding the workshop, don't hesitate
           to
           <strong>write to</strong>
@@ -141,7 +133,7 @@
   </section>
 
   <section class="container">
-    <h2 class="text-center">Who makes it possible?</h2>
+    <h2>Who makes it possible?</h2>
     <div class="grid">
       <div class="community-card">
         <img src="images/fatiando-logo.png" alt="Fatiando a Terra" />
