Move ids in home from h2 to sections

--- a/templates/home.html
+++ b/templates/home.html
@@ -36,8 +36,8 @@
 </header>
 
 <main class="home">
-  <section class="container">
-    <h2 id="about">About</h2>
+  <section id="about" class="container">
+    <h2>About</h2>
     <p style="padding-left: 5em; padding-right: 5em;">
       We are happy to announce a <strong>2 day workshop</strong> in
       which the communities of
@@ -106,7 +106,7 @@
     </div>
   </section>
 
-  <section class="theme-bg" data-theme="dark">
+  <section id="contact" class="theme-bg" data-theme="dark">
     <div class="container dflex flex-row align-start">
       <div class="flex-1">
         <h2>How to participate?</h2>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="flex-1">
-        <h2 id="contact">Contact us</h2>
+        <h2>Contact us</h2>
         <p>
           If you have any questions regarding the workshop, don't hesitate
           to
