--- a/templates/home.html
+++ b/templates/home.html
@@ -72,7 +72,7 @@
       </div>
       <div class="flex-1">
         <h3>
-        <i class="fa-solid fa-calendar"></i> More information
+        <i class="fa-solid fa-circle-info"></i> More information
         </h3>
         <p
           >See
