Add a top border to the footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,7 @@ header h1 {
 footer {
   background-color: var(--background-color);
   text-align: center;
+  border-top: 1px solid var(--muted-border-color);
 }
 
 /* ----------------------- */
