--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,16 +79,34 @@ footer {
   border-top: 1px solid var(--muted-border-color);
 }
 
+h1 {
+    text-align: center;
+}
+
+h2 {
+    margin-bottom: 1em;
+}
+
+h3, h4 {
+    font-weight: normal;
+    margin-bottom: 0.5em;
+}
+
 /* ----------------------- */
 /* Custom classes for home */
 /* ----------------------- */
 
 .home h2,
 .home h3,
-.home h4,
+.home h4 {
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 0.5em;
+}
+
 .home p {
     text-align: center;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.5em;
 }
 
 .home section {
