Increase gap between nav items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,10 @@ nav i.fa-arrow-up-right-from-square {
   vertical-align: middle;
 }
 
+nav ul {
+    gap: 0.15em;
+}
+
 header {
   background-color: var(--background-color);
 }
