--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,7 +47,7 @@
 /* ------------ */
 
 body {
-    background-color: var(--background-color);
+  background-color: var(--background-color);
 }
 
 nav {
@@ -55,7 +55,7 @@ nav {
 }
 
 nav a {
-    color: var(--primary-inverse);
+  color: var(--primary-inverse);
 }
 
 nav a:hover {
@@ -68,7 +68,7 @@ nav i.fa-arrow-up-right-from-square {
 }
 
 nav ul {
-    gap: 0.15em;
+  gap: 0.15em;
 }
 
 header {
@@ -90,16 +90,17 @@ footer {
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 h2 {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
-h3, h4 {
-    font-weight: normal;
-    margin-bottom: 0.5em;
+h3,
+h4 {
+  font-weight: normal;
+  margin-bottom: 0.5em;
 }
 
 /* ----------------------- */
@@ -109,36 +110,36 @@ h3, h4 {
 .home h2,
 .home h3,
 .home h4 {
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 0.5em;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 0.5em;
 }
 
 .home p {
-    text-align: center;
-    margin-bottom: 0.5em;
+  text-align: center;
+  margin-bottom: 0.5em;
 }
 
 .home section {
-    padding: 5em 0;
-    margin-bottom: 0;
+  padding: 5em 0;
+  margin-bottom: 0;
 }
 
 main.home {
-    padding: 0;
+  padding: 0;
 }
 
 .home .information {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: start;
-    margin-top: 5em;
-    margin-bottom: 3em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: start;
+  margin-top: 5em;
+  margin-bottom: 3em;
 }
 
 .home .information div {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
 .logos img {
@@ -158,7 +159,7 @@ main.home {
 }
 .community-card p {
   margin-bottom: 0.5em;
-  }
+}
 
 .community-card img {
   max-width: none;
@@ -167,11 +168,11 @@ main.home {
 }
 
 .home .buttons-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 1.5em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5em;
 }
 
 /* -------------- */
@@ -183,18 +184,18 @@ main.home {
 }
 
 .fa-ul li {
-    list-style: none;
+  list-style: none;
 }
 
 .theme-bg {
-    background-color: var(--background-color);
+  background-color: var(--background-color);
 }
 
 button.themeswitch {
-    border: 0;
-    background-color: inherit;
+  border: 0;
+  background-color: inherit;
 }
 
 button.themeswitch:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
