Add button for schedule in About section

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,6 +65,16 @@
       <p>
         <a
           class="secondary"
+          href="/schedule"
+          role="button"
+          aria-label="Workshop's schedule"
+        >
+          Schedule
+        </a>
+      </p>
+      <p>
+        <a
+          class="secondary"
           href="/coc"
           role="button"
           aria-label="Code of Conduct"
