--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
     </div>
     <p>
       <a
-        class="secondary"
+        class="primary"
         href="#about"
         role="button"
         aria-label="Learn more about the workshop"
@@ -51,6 +51,38 @@
       from <strong>July 28 to 30, 2023</strong>, surrounded by
       astonishing mountain landscape.
     </p>
+    <div class="buttons-row">
+      <p>
+        <a
+          class="primary"
+          href="/workshop"
+          role="button"
+          aria-label="Workshop description and goals"
+        >
+          Description and goals
+        </a>
+      </p>
+      <p>
+        <a
+          class="secondary"
+          href="/schedule"
+          role="button"
+          aria-label="Workshop's schedule"
+        >
+          Schedule
+        </a>
+      </p>
+      <p>
+        <a
+          class="secondary"
+          href="/coc"
+          role="button"
+          aria-label="Code of Conduct"
+        >
+          Code of Conduct
+        </a>
+      </p>
+    </div>
 
     <div class="information">
       <div class="flex-1">
