Add a title to the theme switcher button

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
   </ul>
   <ul>
     <li>
-      <button id="themeSwitcher" class="themeswitch" aria="Toggle theme">
+      <button id="themeSwitcher" title="Toggle theme (auto)" class="themeswitch" aria="Toggle theme">
         <i class="fa-solid fa-circle-half-stroke"></i>
       </button>
     </li>
