Add Zola, Pico CSS and fontawesome to footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,5 +7,10 @@
       >Creative Commons Attribution International 4.0</a
     >
     license.
+    <br>
+    Created with ❤ with
+    <a href="https://www.getzola.org/">Zola</a>,
+    <a href="https://picocss.com/">Pico CSS</a> and
+    <a href="https://fontawesome.com/">FontAwesome</a>.
   </div>
 </footer>
