--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
     <p>
       <a
         class="primary"
-        href="#about"
+        href="{{ get_url(path="/#about")}}"
         role="button"
         aria-label="Learn more about the workshop"
       >
