--- a/templates/home.html
+++ b/templates/home.html
@@ -166,7 +166,7 @@
 
   <section class="container">
     <h2>Who makes it possible?</h2>
-    <div class="grid">
+    <div class="community-cards grid">
       <div class="community-card">
         <img src="images/fatiando-logo.png" alt="Fatiando a Terra" />
         <h3>Fatiando a Terra</h3>
@@ -186,6 +186,14 @@
         <a href="https://www.birs.ca/">birs.ca</a>
       </div>
     </div>
+    <p>
+      <img src="images/swung.png" alt="Software Underground" style="height: 8em;">
+    </p>
+    <p>
+      Special thanks to
+      <a href="https://www.softwareunderground.org">Software Underground</a>
+      for the support!
+    </p>
   </section>
 </main>
 
