Add Plausible Analytics for softwareunderground.org

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="{{ get_url(path="css/pico/pico.css") }}" media="all" />
     <link rel="stylesheet" href="{{ get_url(path="css/fontawesome/css/all.min.css") }}" media="all" />
     <link rel="stylesheet" href="{{ get_url(path="css/style.css") }}" media="all" />
+
+    <!-- Plausible analytics -->
+    <script
+      defer="" data-domain="softwareunderground.org"
+      src="https://plausible.io/js/plausible.js">
+    </script>
+
   </head>
   <body>
 
