Fix links in home buttons

--- a/templates/home.html
+++ b/templates/home.html
@@ -55,7 +55,7 @@
       <p>
         <a
           class="primary"
-          href="/workshop"
+          href="{{ get_url(path="/workshop") }}"
           role="button"
           aria-label="Workshop description and goals"
         >
@@ -65,7 +65,7 @@
       <p>
         <a
           class="secondary"
-          href="/schedule"
+          href="{{ get_url(path="/schedule") }}"
           role="button"
           aria-label="Workshop's schedule"
         >
@@ -75,7 +75,7 @@
       <p>
         <a
           class="secondary"
-          href="/coc"
+          href="{{ get_url(path="/coc") }}"
           role="button"
           aria-label="Code of Conduct"
         >
