Add Information for Participants page

--- a/templates/home.html
+++ b/templates/home.html
@@ -75,6 +75,16 @@
       <p>
         <a
           class="secondary"
+          href="{{ get_url(path="/information") }}"
+          role="button"
+          aria-label="Information for Participants"
+        >
+          Info for Participants
+        </a>
+      </p>
+      <p>
+        <a
+          class="secondary"
           href="{{ get_url(path="/coc") }}"
           role="button"
           aria-label="Code of Conduct"
