Add link to website source code in footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,12 @@
       >Creative Commons Attribution International 4.0</a
     >
     license.
-    <br>
+    <br />
+    Source code available in
+    <a href="https://github.com/softwareunderground/birs-2023"
+      >github.com/softwareunderground/birs-2023</a
+    >.
+    <br />
     Created with ❤ with
     <a href="https://www.getzola.org/">Zola</a>,
     <a href="https://picocss.com/">Pico CSS</a> and
