--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,13 +103,21 @@ h4 {
   margin-bottom: 0.5em;
 }
 
-a.zola-anchor {
-  color: var(--primary-color);
+h1 a.zola-anchor,
+h2 a.zola-anchor,
+h3 a.zola-anchor,
+h4 a.zola-anchor,
+h5 a.zola-anchor{
+    display: None;
+    font-size: 0.5em;
+    vertical-align: middle;
+    margin-left: 0.5em;
+    line-height: 2;
 }
 
-a.zola-anchor:hover {
-  color: var(--primary-hover);
-  text-decoration: none;
+h2:hover a.zola-anchor {
+    display: inline;
+    text-decoration: none;
 }
 
 /* ----------------------- */
