Extend anchor property to other subheadings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,10 +112,12 @@ h5 a.zola-anchor{
     font-size: 0.5em;
     vertical-align: middle;
     margin-left: 0.5em;
-    line-height: 2;
 }
 
-h2:hover a.zola-anchor {
+h2:hover a.zola-anchor,
+h3:hover a.zola-anchor,
+h4:hover a.zola-anchor,
+h5:hover a.zola-anchor {
     display: inline;
     text-decoration: none;
 }
