Create a new section to include information about the workshop
Create a new section with multiple pages, each one including some
information about the workshop. Use a side navbar to navigate through
these pages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,3 +218,27 @@ button.themeswitch {
 button.themeswitch:focus {
   box-shadow: none;
 }
+
+.toc {
+    flex: 1;
+    border-right: 2px solid var(--muted-border-color);
+}
+
+.toc a:hover {
+    color: var(--secondary-hover);
+}
+
+.toc a:focus {
+    color: var(--primary);
+    font-weight: bold;
+    background: transparent;
+}
+
+.toc-active {
+    color: var(--primary);
+    font-weight: bold;
+}
+
+.content {
+    flex: 4;
+}
