Set subdomain in Plausible configuration

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <!-- Plausible analytics -->
     <script
-      defer="" data-domain="softwareunderground.org"
+      defer="" data-domain="birs-2023.softwareunderground.org"
       src="https://plausible.io/js/plausible.js">
     </script>
 
