Add plausible tracking to the webiste

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{{ get_url(path="css/pico/pico.css") }}" media="all" />
     <link rel="stylesheet" href="{{ get_url(path="css/fontawesome/css/all.min.css") }}" media="all" />
     <link rel="stylesheet" href="{{ get_url(path="css/style.css") }}" media="all" />
+    
+    <script defer data-domain="birs-2023.softwareunderground.org" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
 
