--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,10 @@
   flex-wrap: wrap;
 }
 
+.gap-1em {
+    gap: 1em;
+}
+
 /* ------------ */
 /* Custom style */
 /* ------------ */
@@ -155,6 +159,20 @@ main.home {
   align-items: start;
   margin-top: 5em;
   margin-bottom: 3em;
+  flex-wrap: wrap;
+  gap: 0.5em;
+}
+
+@media (min-width: 768px) {
+    .home .information {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 5em;
+      margin-bottom: 3em;
+      gap: 2em;
+    }
 }
 
 .home .information div {
@@ -194,6 +212,7 @@ main.home {
   align-items: center;
   justify-content: center;
   gap: 1.5em;
+  flex-wrap: wrap;
 }
 
 /* -------------- */
