--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
 <main class="home">
   <section id="about" class="container">
     <h2>About</h2>
-    <p style="padding-left: 5em; padding-right: 5em;">
+    <p>
       We are happy to announce a <strong>2 day workshop</strong> in
       which the communities of
       <a href="https://www.fatiando.org">Fatiando a Terra</a> and
@@ -130,7 +130,7 @@
       <!-- map -->
       <iframe
         width="100%"
-        height="750em"
+        height="500vh"
         frameborder="0"
         scrolling="no"
         marginheight="0"
@@ -149,7 +149,7 @@
   </section>
 
   <section id="contact" class="theme-bg" data-theme="dark">
-    <div class="container dflex flex-row align-start">
+    <div class="container dflex flex-row align-start flex-wrap gap-1em">
       <div class="flex-1">
         <h2>How to participate?</h2>
         <p>
