--- a/templates/home.html
+++ b/templates/home.html
@@ -197,7 +197,7 @@
       </div>
     </div>
     <p>
-      <img src="images/swung.png" alt="Software Underground" style="height: 8em;">
+      <img src="images/swung.png" alt="Software Underground" style="height: 8em; width: auto;">
     </p>
     <p>
       Special thanks to
