--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,7 +102,8 @@ nav li {
         display: none;
         position: absolute;
         top: 4em;
-        padding-left: 1em;
+        left: 0;
+        padding-left: 1.5em;
         flex-direction: column;
         justify-content: start;
         align-items: start;
