--- a/templates/home.html
+++ b/templates/home.html
@@ -148,7 +148,7 @@
     </div>
   </section>
 
-  <section id="contact" class="theme-bg" data-theme="dark">
+  <section id="contact" class="contact" data-theme="dark">
     <div class="container dflex flex-row align-start flex-wrap gap-1em">
       <div class="flex-1">
         <h2>How to participate?</h2>
