--- a/templates/base.html
+++ b/templates/base.html
@@ -23,4 +23,5 @@
   </body>
   <script src="{{ get_url(path="js/theme-switch.js") }}"></script>
   <script src="{{ get_url(path="js/burger.js") }}"></script>
+  {% block script %} {% endblock %}
 </html>
