--- a/templates/home.html
+++ b/templates/home.html
@@ -126,9 +126,13 @@
       </div>
     </div>
 
-    <div class="text-center">
+    <div class="map_canvas">
       <!-- map -->
+      <div class="map_overlay">
+        <span>Click to activate this map</span>
+      </div>
       <iframe
+        class="map no_scroll"
         width="100%"
         height="500vh"
         frameborder="0"
@@ -137,15 +141,16 @@
         marginwidth="0"
         src="https://www.openstreetmap.org/export/embed.html?bbox=-115.56533575057985%2C51.171599316608784%2C-115.56179523468018%2C51.17318010475254&amp;layer=mapnik&amp;marker=51.172389717454564%2C-115.56356549263"
         style="border: 1px solid black"
-      ></iframe
-      ><br /><small
-        ><a
-          href="https://www.openstreetmap.org/?mlat=51.17239&amp;mlon=-115.56357#map=19/51.17239/-115.56357"
-          >View Larger Map</a
-        ></small
-      >
+      ></iframe>
       <!-- endmap -->
     </div>
+    <p><small
+      ><a
+        href="https://www.openstreetmap.org/?mlat=51.17239&amp;mlon=-115.56357#map=19/51.17239/-115.56357"
+        >View Larger Map</a
+      ></small
+    >
+    </p>
   </section>
 
   <section id="contact" class="contact" data-theme="dark">
@@ -210,3 +215,7 @@
 {% include "footer.html" %}
 
 {% endblock content %}
+
+{% block script %}
+  <script src="{{ get_url(path="js/map.js") }}"></script>
+{% endblock script %}
