--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ get_url(path="css/pico/pico.css") }}" media="all" />
     <link rel="stylesheet" href="{{ get_url(path="css/fontawesome/css/all.min.css") }}" media="all" />
     <link rel="stylesheet" href="{{ get_url(path="css/style.css") }}" media="all" />
-    
+
     <script defer data-domain="birs-2023.softwareunderground.org" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
@@ -22,4 +22,6 @@
 
   </body>
   <script src="{{ get_url(path="js/theme-switch.js") }}"></script>
+  <script src="{{ get_url(path="js/burger.js") }}"></script>
+  {% block script %} {% endblock %}
 </html>
