--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
 <main class="home">
   <section id="about" class="container">
     <h2>About</h2>
-    <p style="padding-left: 5em; padding-right: 5em;">
+    <p>
       We are happy to announce a <strong>2 day workshop</strong> in
       which the communities of
       <a href="https://www.fatiando.org">Fatiando a Terra</a> and
@@ -126,30 +126,35 @@
       </div>
     </div>
 
-    <div class="text-center">
+    <div class="map_canvas">
       <!-- map -->
+      <div class="map_overlay">
+        <span>Click to activate this map</span>
+      </div>
       <iframe
+        class="map no_scroll"
         width="100%"
-        height="750em"
+        height="500vh"
         frameborder="0"
         scrolling="no"
         marginheight="0"
         marginwidth="0"
         src="https://www.openstreetmap.org/export/embed.html?bbox=-115.56533575057985%2C51.171599316608784%2C-115.56179523468018%2C51.17318010475254&amp;layer=mapnik&amp;marker=51.172389717454564%2C-115.56356549263"
         style="border: 1px solid black"
-      ></iframe
-      ><br /><small
-        ><a
-          href="https://www.openstreetmap.org/?mlat=51.17239&amp;mlon=-115.56357#map=19/51.17239/-115.56357"
-          >View Larger Map</a
-        ></small
-      >
+      ></iframe>
       <!-- endmap -->
     </div>
+    <p><small
+      ><a
+        href="https://www.openstreetmap.org/?mlat=51.17239&amp;mlon=-115.56357#map=19/51.17239/-115.56357"
+        >View Larger Map</a
+      ></small
+    >
+    </p>
   </section>
 
-  <section id="contact" class="theme-bg" data-theme="dark">
-    <div class="container dflex flex-row align-start">
+  <section id="contact" class="contact" data-theme="dark">
+    <div class="container dflex flex-row align-start flex-wrap gap-1em">
       <div class="flex-1">
         <h2>How to participate?</h2>
         <p>
@@ -197,7 +202,7 @@
       </div>
     </div>
     <p>
-      <img src="images/swung.png" alt="Software Underground" style="height: 8em;">
+      <img src="images/swung.png" alt="Software Underground" style="height: 8em; width: auto;">
     </p>
     <p>
       Special thanks to
@@ -210,3 +215,7 @@
 {% include "footer.html" %}
 
 {% endblock content %}
+
+{% block script %}
+  <script src="{{ get_url(path="js/map.js") }}"></script>
+{% endblock script %}
