Fix width of images in home screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -309,8 +309,8 @@ main.home {
 }
 
 .community-card img {
-  max-width: none;
-  height: 10em;
+  max-width: 100%;
+  width: 180px;
   margin-bottom: 1em;
 }
 
