--- a/templates/home.html
+++ b/templates/home.html
@@ -22,17 +22,11 @@
         ><img src="images/birs-dark.png" alt="BIRS"
       /></a>
     </div>
-    <p>
-      <a
-        class="primary"
-        href="{{ get_url(path="/#about")}}"
-        role="button"
-        aria-label="Learn more about the workshop"
-      >
-        Learn more
-      </a>
-    </p>
   </div>
+  <a class="downward-link" href="#scroll-anchor">
+    <i class="fas fa-chevron-down" aria-hidden="true"></i>
+  </a>
+  <div id="scroll-anchor" style="scroll-behaviour: smooth;"></div>
 </header>
 
 <main class="home">
