--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 {% include "navbar.html" %}
 
-<header data-theme="dark">
+<header class="home" data-theme="dark">
   <div class="container banner">
     <h1>
       BIRS Workshop:
