--- a/templates/page.html
+++ b/templates/page.html
@@ -10,9 +10,47 @@
 
 {% include "navbar.html" %}
 
+<header data-theme="dark">
+  <h1>{{ page.title }}</h1>
+</header>
+
+{% if page.extra.show_toc %}
+
+<main class="container dflex flex-row gap-2em">
+  <aside class="toc">
+    <nav>
+      <ul>
+      {% for h1 in page.toc %}
+        <li>
+          <a href="{{ h1.permalink | safe }}">{{ h1.title }}</a>
+          {% if h1.children %}
+            <ul>
+              {% for h2 in h1.children %}
+                <li>
+                    <a href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
+                </li>
+              {% endfor %}
+            </ul>
+          {% endif %}
+        </li>
+      {% endfor %}
+      </ul>
+    </nav>
+  </aside>
+
+  <div>
+  {{ page.content | safe }}
+  </div>
+
+</main>
+
+{% else %}
+
 <main class="container">
   {{ page.content | safe }}
 </main>
+
+{% endif %}
 
 {% include "footer.html" %}
 
