--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
       We are happy to announce a <strong>2 day workshop</strong> in
       which the communities of
       <a href="https://www.fatiando.org">Fatiando a Terra</a> and
-      <a href="https://wwww.simpeg.xyz">SimPEG</a> will join together to
+      <a href="https://simpeg.xyz">SimPEG</a> will join together to
       set the roadmap for enhancing open-source tools for geophysics.
       The workshop will take place at the
       <a href="https://www.birs.ca"
@@ -186,7 +186,7 @@
         <img src="images/simpeg.png" alt="SimPEG" />
         <h3>SimPEG</h3>
         <p>Simulation and Parameter Estimation in Geophysics</p>
-        <a href="https://www.simpeg.xyz">simpeg.xyz</a>
+        <a href="https://simpeg.xyz">simpeg.xyz</a>
       </div>
       <div class="community-card">
         <img src="images/birs.png" alt="BIRS" />
