Add aria label to downward button in home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
       /></a>
     </div>
   </div>
-  <a class="downward-link" href="#scroll-anchor">
+  <a class="downward-link" href="#scroll-anchor" aria-label="Downward link">
     <i class="fas fa-chevron-down" aria-hidden="true"></i>
   </a>
   <div id="scroll-anchor" style="scroll-behaviour: smooth;"></div>
