--- a/static/css/style.css
+++ b/static/css/style.css
@@ -368,6 +368,7 @@ main.home {
     box-shadow: var(--card-box-shadow);
     color: #fff;
     border-left: 15px solid var(--primary);
+    margin-bottom: var(--typography-spacing-vertical);
 }
 
 .admonition p {
